// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskListWorkersTableHandlerIcon should render correctly if worker does not have handler 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <div
      class="style={ color: '#CBCBCB', display: 'block' }
"
    >
      <svg
        display="block"
        fill="currentColor"
        height="24px"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
  </div>
  <div
    class="style={}
"
  />
</div>
`;

exports[`TaskListWorkersTableHandlerIcon should render correctly if worker has handler 1`] = `
<div>
  <div
    class="style={
  '*, *::before, *::after': {
    '-moz-animation': 'none !important',
    '-moz-transition': ' none !important',
    animation: 'none !important',
    'caret-color': ' transparent !important',
    transition: ' none !important',
  },
}
"
  >
    <div
      class="style={ color: '#009A51', display: 'block' }
"
    >
      <svg
        display="block"
        fill="currentColor"
        height="24px"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0zm0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M16.59 7.58 10 14.17l-3.59-3.58L5 12l5 5 8-8zM12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
        />
      </svg>
    </div>
  </div>
  <div
    class="style={}
"
  />
</div>
`;
